--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html {
+    @apply text-[#223152] overflow-x-hidden select-none
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.kPadding {
+    @apply px-8 md:px-16 lg:px-24
+}
+
+.kPaddingMedium {
+    @apply px-8 md:px-16 lg:px-52 py-10 lg:py-28
+}
+
+.kPaddingLarge {
+    @apply px-8 md:px-16 lg:px-52 py-12 lg:py-36
+}
+
+.btn-primary {
+    @apply rounded-3xl outline-none py-3 px-10 bg-blue-600 text-white hover:shadow-xl duration-150 hover:bg-blue-700 focus:outline-none
+}
+
+.btn-secondary {
+    @apply rounded-3xl border-2 py-2 px-10 border-blue-600 outline-none focus:outline-none hover:bg-blue-50 duration-150
+}
+
+.menu-link {
+    @apply hover:bg-blue-50 hover:text-blue-600 hover:rounded-3xl py-2 px-5 cursor-pointer duration-300
 }
