--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 html {
-    @apply text-[#223152] overflow-x-hidden select-none
+    @apply text-[#223152] overflow-x-hidden select-none font-sans
+}
+
+body {
+    font-family: 'Open Sans', sans-serif;
 }
 
 .kPadding {
