--- a/src/index.css
+++ b/src/index.css
@@ -47,3 +47,11 @@ body {
 .menu-link {
     @apply hover:bg-blue-50 hover:text-primary hover:rounded-3xl py-2 px-5 cursor-pointer duration-300
 }
+
+.form-control {
+    @apply outline rounded outline-gray-200 w-full px-4 py-3 text-lg font-semibold text-gray-500
+}
+
+.col-span-fix {
+    @apply col-span-2 md:col-span-1
+}
