--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ body {
 }
 
 .kPaddingLarge {
-    @apply px-8 md:px-16 lg:px-52 py-12 lg:py-36
+    @apply px-8 md:px-16 lg:px-52 2xl:px-72 py-12 lg:py-36
 }
 
 .btn-primary {
@@ -33,7 +33,7 @@ body {
 }
 
 .btn-secondary {
-    @apply rounded-full px-16 border-2 py-3 border-primary outline-none focus:outline-none hover:bg-blue-50 duration-150
+    @apply rounded-full px-16 border-2 py-3 border-primary outline-none font-semibold focus:outline-none hover:bg-blue-50 duration-150
 }
 
 .btn-info {
@@ -45,7 +45,7 @@ body {
 }
 
 .menu-link {
-    @apply hover:bg-blue-50 hover:text-primary hover:rounded-3xl py-2 px-5 cursor-pointer duration-300
+    @apply hover:bg-blue-50 hover:text-primary font-semibold hover:rounded-3xl py-2 px-5 cursor-pointer duration-300
 }
 
 .form-control {
