--- a/src/index.css
+++ b/src/index.css
@@ -65,7 +65,7 @@ body {
 }
 
 .form-control {
-    @apply border-2 rounded border-gray-300 w-full px-4 py-2 lg:py-3 text-sm lg:text-lg lg:font-semibold text-gray-500 outline-none focus:border-primary duration-200
+    @apply border-2 rounded border-gray-300 w-full px-4 py-3 text-sm lg:text-lg lg:font-semibold text-gray-500 outline-none focus:border-primary duration-200
 }
 
 .col-span-fix {
